--- a/components/post-card/post-card__big/post-card__big.scss
+++ b/components/post-card/post-card__big/post-card__big.scss
@@ -96,7 +96,7 @@
 
     .post-category {
         position: absolute;
-        top: 0;
+        top: calc(.3 * var(--font-size-0));
         left: 0;
     }
 }
