--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -289,7 +289,7 @@ body ul.header__burger__links {
         width: 100%;
         max-width: 100% !important;
         margin-top: 0;
-
+        padding: 0;
         a {
             // transform: translateY(-100%);
             border-bottom: 0;
