--- a/blocks/post__navigation/_index.scss
+++ b/blocks/post__navigation/_index.scss
@@ -33,10 +33,32 @@
         border-radius: 10px;
     }
 
-    li {
-        list-style: none;
-        margin-top: -1px;
-        // /* padding: 1.2rem 0;
+    ul {
+        display: flex;
+        flex-direction: column;
+        padding: 0;
+        margin: 0;
+
+        li {
+            list-style: none;
+
+            &:first-child {
+                background-color: turquoise;
+                a {
+                    padding-top: 0;
+                }
+            }
+
+            &:last-child {
+                a {
+                    padding-bottom: 0;
+                }
+            }
+
+            a {
+                padding: 0.35rem 1rem;
+            }
+        }
     }
 
     a {
@@ -68,18 +90,6 @@
 
 }
 
-.post__navigation ul {
-    display: flex;
-    flex-direction: column;
-    padding: 0;
-    margin: 0;
-}
-
-.post__navigation li {
-    list-style: none;
-    margin-top: -1px;
-}
-
 .post__navigation a {
 
     display: inline-block;
@@ -88,10 +98,11 @@
     font-weight: 400;
     text-decoration: none;
 
-    padding: 0.35rem 1rem;
     position: relative;
     text-transform: lowercase;
     pointer-events: auto;
+
+
 }
 
 
@@ -120,6 +131,37 @@
         // border-bottom: 1px solid var(--color-secondary-blend);
         max-width: none;
 
+        ul {
+            display: flex;
+            flex-direction: row;
+            padding: 0;
+            margin: 0;
+
+            li {
+                list-style: none;
+
+                &:first-child {
+                    background-color: transparent;
+                    a {
+                        padding-left: 0;
+                        padding-top: 0;
+                    }
+                }
+
+                &:last-child {
+                    a {
+                        padding-bottom: 0;
+                        // padding-right: calc(var(--padding) * 2);
+                    }
+                }
+
+                a {
+                    text-wrap: nowrap;
+                    padding: 0 0.5rem;
+                }
+            }
+        }
+
         a {
             text-wrap: nowrap;
             padding: 0 0.5rem;
@@ -141,21 +183,6 @@
 
         .indicator {
             display: none;
-        }
-
-        li {
-            &:first-child {
-                a {
-                    padding-left: 0;
-                }
-            }
-
-            &:last-child {
-                a {
-                    // padding-right: calc(var(--padding) * 2);
-                }
-            }
-
         }
     }
 
