--- a/components/post-card/post-card__big/post-card__big.scss
+++ b/components/post-card/post-card__big/post-card__big.scss
@@ -1,6 +1,23 @@
 .post-card__big {
     .single-post__meta__wrapper {
-        padding-left: 2.5rem;
+        // padding-left: 2.5rem;
+    }
+
+    .post-category {
+        // position: absolute;
+        // top: calc(.3 * var(--font-size-0));
+        // left: 0;
+
+        position: absolute;
+        display: flex;
+        flex-direction: row;
+        gap: 0.7rem;
+        writing-mode: vertical-rl;
+        text-orientation: sideways;
+        transform: rotate(180deg);
+        white-space: nowrap;
+        pointer-events: none;
+        left: calc(-.7 * var(--padding));
     }
 }
 
@@ -90,16 +107,13 @@
     // }
 
     .single-post__meta__wrapper {
-        margin-top: calc(2 * var(--font-size-0));
+        // margin-top: calc(2 * var(--font-size-0));
+        margin-top: var(--pd_margin-top_1);
 
     }
 
-    .post-category {
-        position: absolute;
-        top: calc(.3 * var(--font-size-0));
-        left: 0;
-    }
 }
+
 
 .post-card__big__title {
     // display: flex;
@@ -129,68 +143,15 @@
 
 .post-card__big__short-description {
     margin-top: calc(2 * var(--font-size-0));
+    margin-top: var(--pd_margin-top_1);
     width: 100%;
     position: relative;
-    padding-left: 2.5rem;
+    // padding-left: 2.5rem;
 
     * {
         color: var(--color-text-primary);
     }
 }
-
-// .post-card__big__meta {
-//     display: flex;
-//     align-items: flex-end;
-//     justify-content: flex-start;
-//     flex-direction: column;
-//     width: 100%;
-//     grid-row: 1 / 2;
-//     grid-column: 3 / 4;
-//     text-align: left;
-//     // opacity: 0.5;
-//     height: -moz-fit-content;
-//     height: fit-content;
-// }
-
-// .post-card__big__meta__item {
-
-//     display: flex;
-//     flex-direction: row;
-//     padding: 0.3rem 0px;
-//     width: -moz-fit-content;
-//     width: fit-content;
-//     position: relative;
-//     width: 100%;
-//     justify-content: flex-end;
-//     text-align: right;
-
-//     color: var(--color-primary);
-//     opacity: 1;
-
-//     * {
-//         font-size: var(--font-size--1);
-//     }
-
-//     &:not(:first-child) {
-//         &::after {
-//             position: relative;
-//             // content: '/';
-//         }
-//     }
-// }
-
-// .post-card__big__meta__item__variable {
-
-//     color: var(--color-text-grey);
-//     width: 30%;
-//     margin-right: 1rem;
-// }
-
-// .post-card__big__meta__item__value {
-//     // width: 70%;
-//     color: var(--color-text-grey);
-
-// }
 
 
 .post-card__big__gallery__background {
@@ -232,14 +193,16 @@
     }
 }
 
+.post-card__big__gallery_carousel {
+    aspect-ratio: 3/2;
+}
+
 .post-card__big__gallery {
     position: relative;
-    // width: 100%;
     height: 100%;
     z-index: 5;
 
     width: calc(50% - 5px);
-    aspect-ratio: 3/2;
 
     .f-carousel {
         overflow: hidden;
@@ -366,7 +329,7 @@
 
             .f-thumbs__track {
                 padding: 1px;
-                align-items: center;
+                align-items: flex-start;
                 // flex-direction: column;
                 // width: fit-content;
             }
@@ -376,7 +339,7 @@
         .f-thumbs__slide {
             width: fit-content;
             max-width: 60px;
-            // height: fit-content;
+            height: fit-content;
             align-items: flex-start;
         }
 
@@ -451,8 +414,12 @@
 
     .post-card__big__content__wrapper {
         width: 100%;
-        margin-top: 6rem;
+        margin-top: 2rem;
+        padding: 0 var(--padding);
+
     }
+
+
 
     .post-card__big__heading {}
 
@@ -476,16 +443,11 @@
         }
 
         .post-card__big__gallery__img__source {
-            width: 85%;
-            height: 85%;
+            // width: 85%;
+            // height: 85%;
         }
     }
-}
 
-@media screen and (max-width: 767px) {
-    .post-card__big__content__wrapper {
-        padding: 0 var(--padding);
-    }
 
     .post-card__big__gallery {
         .f-thumbs {
@@ -505,5 +467,6 @@
         }
     }
 }
+
 
 @media screen and (max-width: 600px) {}
