--- a/components/post-card/post-card__big/post-card__big.scss
+++ b/components/post-card/post-card__big/post-card__big.scss
@@ -26,7 +26,7 @@
     height: fit-content;
     display: flex;
     flex-direction: row;
-    gap: calc(.5% + 1 * var(--gap));
+    gap: var(--gap);
 }
 
 .post-card__big {
@@ -406,10 +406,21 @@
     .post-card__big {
         flex-direction: column;
         gap: 0;
+
+        .post-category {
+            position: relative;
+            writing-mode: horizontal-tb;
+            transform: rotate(0);
+            left: 0;
+            top: 0;
+            gap: .5rem;
+            padding-left: var(--padding);
+        }
     }
 
     .post-card__big__gallery {
         width: 100%;
+        margin-top: var(--pd_margin-top_05);
     }
 
     .post-card__big__content__wrapper {
