--- a/blocks/post__navigation/_index.scss
+++ b/blocks/post__navigation/_index.scss
@@ -114,6 +114,7 @@
         margin-bottom: calc(2 * var(--padding)) !important;
         padding-left: 0;
         height: calc(var(--font-size-0));
+        height: 0;
     }
 
     .post__navigation {
